--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>TECH TALK</h1>
+              <h1>TECH TALK 1</h1>
               <p class="uk-text-justify uk-text-small section-text">
                 “As engineers, we are going to be in a position to change the world, not just study it.”-Henry Petroski
                 <br>
@@ -269,12 +269,12 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  <img src="./static/img/events/tch3.png" alt="Wire Trap">
+                  <img src="./static/img/events/tch3.jpg" alt="Wire Trap">
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>TECH TALK</h1>
+              <h1>TECH TALK 2</h1>
               <p class="uk-text-justify uk-text-small section-text">
                 “As engineers, we are going to be in a position to change the world, not just study it.”-Henry Petroski
                 <br>
@@ -285,7 +285,7 @@
                 Date: 27th February, 2022<br> Time: 3 p.m.-4 p.m.<br>
                 <br>
               </p>
-                <a class="neon-btn" href="https://bit.ly/3JCtKNC" target="_blank">
+                <a class="neon-btn" href="https://bit.ly/3h6YIRY" target="_blank">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -352,15 +352,15 @@
 
                 <blockquote class="card-blockquote">
                   <h2 class="font-weight-bold text-white border-bottom">
-                    Tech Talk 
+                    Tech Talk 1
                   </h2>
                 </blockquote>
                 Date - 26<sup>th</sup> Febuary 2022 <br>
                 Time - 4:30 <br>
                 Venue - Youtube @ieeesbjiit
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -369,11 +369,24 @@
                     Dense Eclipse
                   </h2>
                 </blockquote>
-                Date - 26<sup>th</sup> Febuary 2022 <br>
+                Date - 26<sup>th</sup> February 2022 <br>
                 Time - 8 PM to 10 PM<br>
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
+                <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                  <span class="mask bg-gradient-default opacity-7"></span>
+  
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">
+                    Tech Talk 2
+                    </h2>
+                  </blockquote>
+                  Date - 27<sup>th</sup> February 2022 <br>
+                  Time - 3 PM to 4 PM<br>
+                </div>
+            </li>
+            <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -382,12 +395,23 @@
                     Spiral Forge
                   </h2>
                 </blockquote>
-                Date - 27<sup>th</sup> Febuary 2022 <br>
+                Date - 27<sup>th</sup> February 2022 <br>
                 Time - 8 PM to 10 PM<br>
               </div>
-              </li>
-              <li>
             </li>
+            <li>
+                <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                  <span class="mask bg-gradient-default opacity-7"></span>
+  
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">
+                      Wire Trap
+                    </h2>
+                  </blockquote>
+                  Date - 27<sup>th</sup> February 2022 <br>
+                  Time - 1 PM to 2 PM<br>
+                </div>
+              </li>
           </ul>
         </div>
       </div>
