--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Xenith 2022</title>
+  <title>Xenith 2023</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="static/css/uikit.min.css" />
@@ -63,7 +63,7 @@
           <nav class="uk-navbar-container uk-margin uk-navbar-transparent uk-light" uk-navbar="dropbar: true;"
             id="navbarMain">
             <header>
-              <a href="#" class="logo"> Xentih</a>
+              <a href="#" class="logo"> Xenith</a>
               
               
           </header>
@@ -99,7 +99,7 @@
 
       </div>
       <div class="uk-position-center content2">
-	  <h1 class="check1"><span>Persuit </span>Of <span>Abyss</span></h1>
+	  <h1 class="check1"><span>Pursuit </span>of <span>Abyss</span></h1>
 
 
       </div>
