--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Xenith 2022</title>
+  <title>Xenith 2023</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="static/css/uikit.min.css" />
@@ -48,7 +48,7 @@
   </div>
 
   <div id="postLoader" class="uk-hidden"
-    style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;background-size: cover;">
+    style="background: url('./static/img/team/underwater-texture-macro-blue-water-backgrounds-water-textures-blue-backgrounds.jpg') repeat fixed 100%;background-size: cover;">
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
       <video autoplay muted loop id="myVideo" style="width: 100vw;height: 100vh;object-fit: cover;">
@@ -138,7 +138,7 @@
     <!--About section begins-->
     <div id="about" uk-scrollspy="cls:uk-animation-fade">
       <div style="text-align: center; width: 100%">
-        <span class="sectionHead" style="color: whitesmoke;">About</span>
+        <span class="sectionHead" id="aboutit" style="color: whitesmoke;">About</span>
         <div class="about-container">
           <p class="uk-text-justify uk-text-large section-text">
             In the last few years, we have come to terms with the fact that
