--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           
             <div class="uk-navbar-center">
               <ul class="uk-navbar-nav">
-                <li id="ni-1" onclick="setActive(1)" class="active"><a class="cp-tag" href="#postLoader">Home</a></li>
+                <li id="ni-1" onclick="setActive(1)"><a class="cp-tag" href="#postLoader">Home</a></li>
                 <li id="ni-2" onclick="setActive(2)"><a class="cp-tag" href="#about">About</a></li>
                 <li id="ni-3" onclick="setActive(3)"><a class="cp-tag" href="#event">Events</a></li>
                 <li id="ni-4" onclick="setActive(4)"><a class="cp-tag" href="#timeline">Timeline</a></li>
