--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
       <div class="footer-center">
         <div class="name">
-          <div class="btn ig-btn" style="float: left">
+          <div style="float: left">
             <i class="fa fa-map-marker" aria-hidden="true" id="ig"></i>
           </div>
           <p style="display: flex; text-align: left">
@@ -646,22 +646,23 @@
             India
           </p>
         </div>
-
+      </div>
+      <div class="footer-center1">
         <div class="name">
-          <div class="btn ph-btn" style="float: left">
+          <div style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
           <p style="display: flex">Shwetank Verma : +91 9852244157</p>
         </div>
 
         <div class="name">
-          <div class="btn ph-btn" style="float: left">
+          <div style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
           <p style="display: flex">Priyanjali Chaudhary : +91 7983760053</p>
         </div>
         <div class="name">
-          <div class="btn ph-btn" style="float: left">
+          <div style="float: left">
             <i class="fa fa-at" aria-hidden="true" id="ph"></i>
           </div>
           <p style="display: flex">Email - ieeesbjiitweb@gmail.com</p>
@@ -672,6 +673,7 @@
         <p class="footer-company-about">
           <span class="uk-text-center uk-text-large">Find us here</span>
         </p>
+        <hr style="margin: -15px 0 5px 0;color:lightslategray;">
 
         <div class="footer-icons">
           <div class="container">
