--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <source src="./static/underwater-ocean-fish-and-turtle.mp4" type="video/mp4" class="active">
       </video>
       <!--Hidden For Pc-->
-      <!-- <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" /> -->
+      <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" />
 
       <!--Hidden For Phone-->
       <div class="uk-position-top active" uk-scrollspy="cls:uk-animation-fade">
