--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     <!--About section ends-->
 
     <!--Event section begins-->
-   <div class="uk-position-relative teamh" id="team" uk-scrollspy="cls:uk-animation-fade">
+   <div class="uk-position-relative teamh" id="event" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
-          <span class="sectionHead">Organising team</span>
+          <span class="sectionHead">EVENT</span>
         </div>
       </div>
       <br /><br /><br /><br />
