--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
    <div class="uk-position-relative teamh" id="event" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
-          <span class="sectionHead">EVENT</span>
+          <span class="sectionHead">EVENTS</span>
         </div>
       </div>
       <br /><br /><br /><br />
