major fixes and mobile responsive fixes

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       <div class="col-md-4">
         <div class="container">
           <div class="image-card card" >
-          <img src="static/img/team/yuvraj.jpg" alt="Avatar" class="image " style="background-image">
+          <img src="static/img/team/yuvraj.jpg" alt="Avatar" class="image ">
           <div class="middle">
             <div class="teamcontent">
               <h2>Yuvraj Chaudhary</h2><br>
@@ -415,7 +415,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/parth.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/parth.jpg" alt="Avatar" class="image ">
               <div class="middle">
                 <div class="teamcontent">
                 <h2>Parth Punia</h2><br>
@@ -430,7 +430,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/vinay.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/vinay.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Vinay Baliyan</h2><br>
@@ -445,7 +445,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/ananya.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/ananya.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Ananya Garg</h2><br>
@@ -460,7 +460,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/avni.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/avni.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Avni Arora</h2><br>
@@ -473,7 +473,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/sanskar.jpeg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/sanskar.jpeg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Sanskar Dubey</h2><br>
@@ -486,7 +486,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/mitul.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/mitul.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Mitul Jain</h2><br>
@@ -499,7 +499,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/kshiti.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/kshiti.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Kshiti Srivastava</h2><br>
@@ -512,7 +512,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/rahul.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/rahul.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Rahul Raina</h2><br>
@@ -525,7 +525,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/nandini.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/nandini.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Nandini Agarwal</h2><br>
@@ -538,7 +538,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/rhythm.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/rhythm.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Rhythm Shandlya</h2><br>
@@ -552,7 +552,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/abhiram.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/abhiram.jpg" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>B.S.N Abhiram</h2><br>
@@ -565,7 +565,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/nikita.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/nikita.jpg" alt="Avatar" class="image ">
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Nikita Singhal</h2><br>
@@ -578,7 +578,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/bhavey.png" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/bhavey.png" alt="Avatar" class="image " >
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Bhavey Mittal</h2><br>
@@ -591,7 +591,7 @@
         <div class="col-md-4">
           <div class="container">
             <div class="image-card card" >
-            <img src="static/img/team/ishanya.jpg" alt="Avatar" class="image " style="background-image">
+            <img src="static/img/team/ishanya.jpg" alt="Avatar" class="image ">
               <div class="middle">
                 <div class="teamcontent">
                   <h2>Ishanya Yadav</h2><br>
