events section changed

--- a/index.html
+++ b/index.html
@@ -184,7 +184,14 @@
 </div> 
 </div>
  -->
-<div class="event-final">
+ <div class="uk-position-relative teamh" id="event" uk-scrollspy="cls:uk-animation-fade">
+  <div class="uk-position-top-center">
+    <div class="uk-tile uk-tile-transparent">
+      <span class="sectionHead">EVENTS</span>
+    </div>
+  </div>
+  <br />
+  <div class="event-final">
  <div class="containerevent">
    <div class="card">
      <div class="box">
@@ -265,10 +272,11 @@
   </div>
  </div>
 </div>
-
+</div>
 
 
     <!--Event section begins-->
+   <!--
    <div class="uk-position-relative teamh" id="event" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
@@ -282,7 +290,7 @@
 
           
 
-          <!-- <div class="tl-bg" style="background-image: url(https://media.istockphoto.com/id/1152237432/photo/underwater-scene-tropical-seabed-with-reef-and-sunshine.jpg?s=612x612&w=0&k=20&c=qAe3eZ_bwmrq6CW5IoddV2icSDKsO7vkbQKwqy3ma0o=)"></div>
+          <div class="tl-bg" style="background-image: url(https://media.istockphoto.com/id/1152237432/photo/underwater-scene-tropical-seabed-with-reef-and-sunshine.jpg?s=612x612&w=0&k=20&c=qAe3eZ_bwmrq6CW5IoddV2icSDKsO7vkbQKwqy3ma0o=)"></div>
           <div class="eventname">
            <p>HACKSTREET</p>
           </div>
@@ -290,7 +298,7 @@
             <img src="https://cdn.pixabay.com/photo/2015/07/19/15/45/sun-851659__340.jpg">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tem.</p>
             <button class="register">Register now</button>
-          </div> -->
+          </div>
         </div>
       
         <div class="tl-item"> 
@@ -337,7 +345,7 @@
              <button class="register">Register now</button>
           </div>
       </main>
-  </div>
+  </div> -->
     <!--Event section ends-->
 
     <!--Timeline section begins-->
