--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script>
+    window.onload = function() {
+      var context = new AudioContext();
+    }
+    </script>
 
   <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   <!-- Favicon -->
@@ -47,9 +52,39 @@
   <!--Pre Loader-->
   <div id="preLoader">
     <div class="uk-position-center preLoader">
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player src="static/106788-water.json" background="transparent" speed="1"
-        style="width: 100%; height: 40vh" loop autoplay></lottie-player>
+        style="width: 100%; height: 40vh" loop autoplay></lottie-player> -->
+        <div class="dolphin">
+          <div class="line line__size1"></div>
+          <div class="line line__size2"></div>
+          <div class="line line__size3"></div>
+          <div class="line line__size4"></div>
+          <div class="line line__size5"></div>
+          <div class="line line__size6"></div>
+          <div class="line line__size7"></div>
+          <div class="line line__size8"></div>
+          <div class="line line__size9"></div>
+          <div class="line line__size10"></div>
+          <div class="line line__size11"></div>
+          <div class="line line__size12"></div>
+          <div class="line line__size13"></div>
+          <div class="line line__size14"></div>
+          <div class="line line__size15"></div>
+          <div class="line line__size16"></div>
+          <div class="line line__size17"></div>
+          <div class="line line__size18"></div>
+          <div class="line line__size19"></div>
+          <div class="line line__size20"></div>
+          <div class="line line__size21"></div>
+          <div class="line line__size22"></div>
+          <div class="line line__size23"></div>
+          <div class="line line__size24"></div>
+          <div class="line line__size25"></div>
+          <div class="line line__size26"></div>
+          <div class="line line__size27"></div>
+          <div class="line line__size28"></div>
+</div>
     </div>
   </div>
 
@@ -63,6 +98,10 @@
       <!--Hidden For Pc-->
       <!-- <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" /> -->
       <div id="landingpage"></div>
+      <audio controls autoplay loop style="display:none" id="audio">
+        <source src="./assets/audio.mp3" type="audio/mpeg">
+      </audio>
+      
       <!--Hidden For Phone-->
       <div class="uk-position-top active" uk-scrollspy="cls:uk-animation-fade">
         <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
