--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
   <div id="postLoader" class="uk-hidden"
     style="background: url('./static/img/team/underwater-texture-macro-blue-water-backgrounds-water-textures-blue-backgrounds.jpg') repeat fixed 100%;background-size: cover;">
+    <div id="scroll"></div>
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
       <video autoplay muted loop id="myVideo" style="width: 100vw;height: 100vh;object-fit: cover;">
