--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile" style="background-image: url(/XenithWebsite23-main/static/img/team/yuvraj.jpg)"></div>
+            <div class="profile" style="background-image: url(./static/img/team/yuvraj.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Yuvraj Chaudhary</h1>
@@ -475,7 +475,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/parth.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/parth.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Parth Punia</h1>
@@ -488,7 +488,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/vinay.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/vinay.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Vinay Baliyan</h1>
@@ -501,7 +501,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile "  style="background-image: url(/XenithWebsite23-main/static/img/team/ananya.jpg)"></div>
+            <div class="profile "  style="background-image: url(./static/img/team/ananya.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Ananya Garg</h1>
@@ -514,7 +514,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/avni.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/avni.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Avni Arora</h1>
@@ -527,7 +527,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/sanskar.jpeg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/sanskar.jpeg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Sanskar Dubey</h1>
@@ -540,7 +540,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/mitul.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/mitul.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Mitul Jain</h1>
@@ -553,7 +553,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/kshiti.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/kshiti.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Kshiti Srivastava</h1>
@@ -566,7 +566,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/rahul.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/rahul.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Rahul Raina</h1>
@@ -579,7 +579,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/nandini.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/nandini.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Nandini Agarwal</h1>
@@ -592,7 +592,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/rhythm.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/rhythm.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Rhythm Shandlya</h1>
@@ -605,7 +605,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/abhiram.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/abhiram.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">B.S.N Abhiram</h1>
@@ -618,7 +618,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/nikita.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/nikita.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Nikita Singhal</h1>
@@ -631,7 +631,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/bhavey.png)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/bhavey.png)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Bhavey Mittal</h1>
@@ -644,7 +644,7 @@
         <div class="cont">
           <div class="profile_container">
             <div class="back"></div>
-            <div class="profile"  style="background-image: url(/XenithWebsite23-main/static/img/team/ishanya.jpg)"></div>
+            <div class="profile"  style="background-image: url(./static/img/team/ishanya.jpg)"></div>
           </div>
           <div class="profile_infos">
             <h1 class="name">Ishanya Yadav</h1>
