sponsor card fixed

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <div class="uk-tile uk-tile-transparent">
             <span class="sectionHead">Timeline</span>
           </div>
-          <div id="time2line" class="timeline">
+          <div id="timeline" class="timeline">
             <ul>
               <li>
                 <div>
