footer css fixed

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
       </div>
 
       <div class="footer-center">
-        <div class="name">
+        <div class="nme">
           <div style="float: left">
             <i class="fa fa-map-marker" aria-hidden="true" id="ig"></i>
           </div>
@@ -705,20 +705,20 @@
         </div>
       </div>
       <div class="footer-center1">
-        <div class="name">
+        <div class="nme">
           <div style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
           <p style="display: flex">Shwetank Verma : +91 9852244157</p>
         </div>
 
-        <div class="name">
+        <div class="nme">
           <div style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
           <p style="display: flex">Priyanjali Chaudhary : +91 7983760053</p>
         </div>
-        <div class="name">
+        <div class="nme">
           <div style="float: left">
             <i class="fa fa-at" aria-hidden="true" id="ph"></i>
           </div>
