--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="static/css/style.css" />
   <link rel="stylesheet" href="static/css/about.css" />
   <link rel="stylesheet" href="static/css/scroll.css" />
@@ -41,6 +42,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
   <link rel="manifest" href="static/favicon/site.webmanifest">
+  
   <script>
     $(function () {
       $("#landingpage").load("./parallax.html");
