--- a/index.html
+++ b/index.html
@@ -670,12 +670,12 @@
 
     <!-- Footer section -->
     <footer class="uk-position-relative footer-distributed" uk-scrollspy="cls:uk-animation-fade" id="contact">
-      <div class="wves">
+      <!-- <div class="wves">
         <div class="wve" id="wve1"></div>
         <div class="wve" id="wve2"></div>
         <div class="wve" id="wve3"></div>
         <div class="wve" id="wve4"></div>
-      </div>
+      </div> -->
 
       <div class="footer-left">
         <p class="footer-company-name">
