landing page fix

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
     <div id="scroll"></div>
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
-      <video autoplay muted loop id="myVideo" style="width: 100vw;height: 100vh;object-fit: cover;">
+      <!-- <video autoplay muted loop id="myVideo" style="width: 100vw;height: 100vh;object-fit: cover;">
         <source src="./static/video-output-4B85B99F-1103-4EC2-B56C-8AC54CC55F34.mov" type="video/mp4"
           class="active video123">
-      </video>
+      </video> -->
       <!--Hidden For Pc-->
       <!-- <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" /> -->
-      <div id="landingpage"></div>
+      <div id="landingpage" style="width: 100vw;height: 100vh;"></div>
       <audio controls autoplay loop style="display:none" id="audio">
         <source src="./assets/audio.mp3" type="audio/mpeg">
       </audio>
