--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     </div>
   </div>
 
-  <div id="postLoader" class="uk-hidden"
-    style="background: url('./static/img/team/underwater-texture-macro-blue-water-backgrounds-water-textures-blue-backgrounds.jpg') repeat fixed 100%;background-size: cover;">
+  <div id="postLoader" class="uk-hidden" style="background-color:black">
     <div id="scroll"></div>
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
@@ -101,7 +100,7 @@
       </video> -->
       <!--Hidden For Pc-->
       <!-- <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" /> -->
-      <div id="landingpage" style="width: 100vw;height: 100vh;"></div>
+      <div id="landingpage" style="width: 110vw;height: 100vh;"></div>
       <audio controls autoplay loop style="display:none" id="audio">
         <source src="./assets/audio.mp3" type="audio/mpeg">
       </audio>
