landing page fix

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <div id="postLoader" class="uk-hidden" style="background:url('./assets/images/wave-paint.png')">
+  <div id="postLoader" class="uk-hidden" style="background-color:black">
     <div id="scroll"></div>
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
