--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </video> -->
       <!--Hidden For Pc-->
       <!-- <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" /> -->
-      <div id="landingpage" style="width: 110vw;height: 100vh;"></div>
+      <div id="landingpage" class="lp"></div>
       <audio controls autoplay loop style="display:none" id="audio">
         <source src="./assets/audio.mp3" type="audio/mpeg">
       </audio>
