--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
       uk-slider="center: true; autoplay: true; autoplay-interval: 2000; finite: true ">
 
       <ul class="uk-slider-items uk-grid">
-        <li class="uk-width-1-2">
+        <li class="uk-width-1">
           <div class="uk-panel">
 
       <main id="sponsorContainer">
