--- a/index.html
+++ b/index.html
@@ -60,36 +60,25 @@
       <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player src="static/106788-water.json" background="transparent" speed="1"
         style="width: 100%; height: 40vh" loop autoplay></lottie-player> -->
-      <div class="dolphin">
-        <div class="line line__size1"></div>
-        <div class="line line__size2"></div>
-        <div class="line line__size3"></div>
-        <div class="line line__size4"></div>
-        <div class="line line__size5"></div>
-        <div class="line line__size6"></div>
-        <div class="line line__size7"></div>
-        <div class="line line__size8"></div>
-        <div class="line line__size9"></div>
-        <div class="line line__size10"></div>
-        <div class="line line__size11"></div>
-        <div class="line line__size12"></div>
-        <div class="line line__size13"></div>
-        <div class="line line__size14"></div>
-        <div class="line line__size15"></div>
-        <div class="line line__size16"></div>
-        <div class="line line__size17"></div>
-        <div class="line line__size18"></div>
-        <div class="line line__size19"></div>
-        <div class="line line__size20"></div>
-        <div class="line line__size21"></div>
-        <div class="line line__size22"></div>
-        <div class="line line__size23"></div>
-        <div class="line line__size24"></div>
-        <div class="line line__size25"></div>
-        <div class="line line__size26"></div>
-        <div class="line line__size27"></div>
-        <div class="line line__size28"></div>
-      </div>
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" style="display: none;">
+          <symbol id="wave">
+            <path d="M420,20c21.5-0.4,38.8-2.5,51.1-4.5c13.4-2.2,26.5-5.2,27.3-5.4C514,6.5,518,4.7,528.5,2.7c7.1-1.3,17.9-2.8,31.5-2.7c0,0,0,0,0,0v20H420z"></path>
+            <path d="M420,20c-21.5-0.4-38.8-2.5-51.1-4.5c-13.4-2.2-26.5-5.2-27.3-5.4C326,6.5,322,4.7,311.5,2.7C304.3,1.4,293.6-0.1,280,0c0,0,0,0,0,0v20H420z"></path>
+            <path d="M140,20c21.5-0.4,38.8-2.5,51.1-4.5c13.4-2.2,26.5-5.2,27.3-5.4C234,6.5,238,4.7,248.5,2.7c7.1-1.3,17.9-2.8,31.5-2.7c0,0,0,0,0,0v20H140z"></path>
+            <path d="M140,20c-21.5-0.4-38.8-2.5-51.1-4.5c-13.4-2.2-26.5-5.2-27.3-5.4C46,6.5,42,4.7,31.5,2.7C24.3,1.4,13.6-0.1,0,0c0,0,0,0,0,0l0,20H140z"></path>
+          </symbol>
+        </svg>
+        <div class="bx">
+         
+          <div id="wter" class="wter">
+            <svg viewBox="0 0 560 20" class="wter_wave wter_wave_back">
+              <use xlink:href="#wave"></use>
+            </svg>
+            <svg viewBox="0 0 560 20" class="wter_wave wter_wave_front">
+              <use xlink:href="#wave"></use>
+            </svg>
+          </div>
+        </div>
     </div>
   </div>
 
