--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
           
         </div>
-        <video autoplay muted loop id="myVideo" style="width:100vw;height:100vh;object-fit:cover;">
+        <video autoplay muted loop id="myVideo" style="width:100vw;height:100vh;object-fit:fill;">
           <source src="./assets/octopus.mp4" type="video/mp4"
             class="active video123">
         </video>
