overflow bug fix

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
   </div>
 
-  <div id="postLoader" class="uk-hidden" style="background-color:black">
+  <div id="postLoader" class="uk-hidden" style="overflow:hidden; max-width:100vw;">
     <div id="scroll"></div>
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
@@ -92,7 +92,7 @@
       </video> -->
       <!--Hidden For Pc-->
       <!-- <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" /> -->
-      <div id="landingpage" class="lp"></div>
+      <div id="landingpage" class="lp" style="overflow:hidden; max-width:100vw;"></div>
       <audio controls autoplay loop style="display:none" id="audio">
         <source src="./assets/audio.mp3" type="audio/mpeg">
       </audio>
@@ -160,7 +160,7 @@
 
     <!--About section begins-->
 
-    <div id="about" uk-scrollspy="cls:uk-animation-fade">
+    <div id="about" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw;">
       <div class="octopus">
         <div class="coner">
   
@@ -212,7 +212,7 @@
       
     </div>
     <!-- about ends -->
-    <div class="uk-position-relative teamh" id="event" uk-scrollspy="cls:uk-animation-fade">
+    <div class="uk-position-relative teamh" id="event" uk-scrollspy="cls:uk-animation-fade" style="overflow:hidden; max-width:100vw;">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
           <span class="sectionHead">EVENTS</span>
@@ -297,7 +297,7 @@
     <div class="uk-tile uk-tile-transparent">
       <span class="sectionHead">Timeline</span>
     </div>
-    <div id="timeline" class="timeline">
+    <div id="timeline" class="timeline" style="overflow:hidden; max-width:100vw;">
       <ul>
         <li>
           <div>
@@ -374,7 +374,7 @@
     <!--Timeline section ends -->
 
     <!--gallery-->
-    <div class="uk-position-relative" id="gallery" uk-scrollspy="cls:uk-animation-fade">
+    <div class="uk-position-relative" id="gallery" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw;">
       <div class="uk-section timeline-main galleryalign">
 
         <div class="uk-tile uk-tile-transparent galleryalign2">
@@ -392,7 +392,7 @@
             <div class="swiper-slide"><img src="./static/img/gallery/img2.jpeg" alt=""></div>
             <div class="swiper-slide"><img src="./static/img/gallery/img7.jpeg" alt=""></div>
           </div>
-          <div class="swiper-pagination"></div>
+          <!-- <div class="swiper-pagination"></div> -->
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
         </div>
@@ -521,7 +521,7 @@
 
 
     <!--Team section begins-->
-    <div class="uk-position-relative teamh" id="team" uk-scrollspy="cls:uk-animation-fade">
+    <div class="uk-position-relative teamh" id="team" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw;">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
           <span class="sectionHead">Organising team</span>
@@ -732,7 +732,7 @@
     <!--Sponsor section begins-->
     <!-- Sponsor section begins -->
 
-    <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
+    <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw;">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
           <h1 class="sectionHead" data-text="Sponsors">Sponsors</h1>
@@ -761,7 +761,7 @@
   <!--Sponsor section ends-->
 
   <!-- Footer section -->
-  <footer class="uk-position-relative footer-distributed" uk-scrollspy="cls:uk-animation-fade" id="contact">
+  <footer class="uk-position-relative footer-distributed" uk-scrollspy="cls:uk-animation-fade" id="contact" style="overflow-x:hidden; max-width:100vw;">
     <!-- <div class="wves">
       <div class="wve" id="wve1"></div>
       <div class="wve" id="wve2"></div>
