event square added

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
   
           <div id="countdown">
             <ul>
-              <li class="time"><span id="days"></span>days</li>
-              <li class="time"><span id="hours"></span>Hours</li>
-              <li class="time"><span id="minutes"></span>Minutes</li>
+              <li class="tme"><span id="days"></span>days</li>
+              <li class="tme"><span id="hours"></span>Hours</li>
+              <li class="tme"><span id="minutes"></span>Minutes</li>
               
             </ul>
           </div>
