--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <lottie-player src="static/106788-water.json" background="transparent" speed="1"
         style="width: 100%; height: 40vh" loop autoplay></lottie-player> -->
         <video autoplay muted loop id="myVide" style="width:100vw;height:100vh;object-fit:cover;">
-          <source src="./assets/XenithLogoPreloaderWebsite.mp4" type="video/mp4"
-            class="active video123">
+          <!-- <source src="./assets/XenithLogoPreloaderWebsite.mp4" type="video/mp4"
+            class="active video123"> -->
         </video>
     </div>
   </div>
