postloader minor fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             class="active video123">
         </video>
         <picture class="ploader">
-          <source media="(max-width: 450px)" srcset="./assets/xenith_mobb.gif">
+          <source media="(max-width: 450px)" srcset="./assets/xenith_mobb_1.gif">
           <img class="ploader" src="./assets/xenith_pc.gif" style="object-fit:cover">
       </picture>
     </div>
