--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             class="active video123">
         </video>
         <picture class="ploader">
-          <source media="(max-width: 450px)" srcset="./assets/xenith_mobb_1.gif">
-          <img class="ploader" src="./assets/xenith_pc.gif" style="object-fit:cover">
+          <!-- <source media="(max-width: 450px)" srcset="./assets/xenith_mobb_1.gif"> -->
+          <img class="ploader" src="./assets/xenith_pc.gif" style="object-fit:contain">
       </picture>
     </div>
   </div>
