--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </video>
         <picture class="ploader">
           <!-- <source media="(max-width: 450px)" srcset="./assets/xenith_mobb_1.gif"> -->
-          <img class="ploader" src="./assets/xenith_pc.gif" style="object-fit:contain">
+          <img class="ploader" src="./assets/xenith_mobb.gif" style="object-fit:contain">
       </picture>
     </div>
   </div>
