--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
   </div>
 
-  <div id="postLoader" class="uk-hidden" style="overflow:hidden; max-width:100vw;">
+  <div id="postLoader" class="uk-hidden" style="overflow:hidden; max-width:100vw;  ">
     <div id="scroll"></div>
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
@@ -720,8 +720,8 @@
     <!--Team section ends-->
     <!--Sponsor section begins-->
     <!-- Sponsor section begins -->
-
-    <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw;">
+<!-- background:url('./assets/images/bgg.jpg'); background-size:cover; -->
+    <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade" style="overflow-x:hidden; max-width:100vw; ">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
           <h1 class="sectionHead" data-text="Sponsors">Sponsors</h1>
@@ -750,7 +750,7 @@
   <!--Sponsor section ends-->
 
   <!-- Footer section -->
-  <footer class="uk-position-relative footer-distributed" uk-scrollspy="cls:uk-animation-fade" id="contact" style="overflow-x:hidden; max-width:100vw;">
+  <footer class="uk-position-relative footer-distributed" uk-scrollspy="cls:uk-animation-fade" id="contact" style="overflow-x:hidden; max-width:100vw; ">
     <!-- <div class="wves">
       <div class="wve" id="wve1"></div>
       <div class="wve" id="wve2"></div>
